oxiplate-derive/tests/broken/extends/block-with-else.stderr
error: Unexpected statement in `block` statement; is an `endblock` statement missing?
 --> tests/broken/extends/block-with-else.rs:6:20
  |
6 | {% block content %}{% else %}{% parent %}{% else %}{% endblock %}"#
  |                    ^^^^^^^^^^

error: Unexpected statement in `block` statement; is an `endblock` statement missing?
 --> tests/broken/extends/block-with-else.rs:6:42
  |
6 | {% block content %}{% else %}{% parent %}{% else %}{% endblock %}"#
  |                                          ^^^^^^^^^^
